@@ -556,7 +556,7 @@ FFmpegDecoder::decode_subtitle_packet ()
 	   source that we may have chopped off for the DCP)
 	*/
 	double const packet_time = (static_cast<double> (sub.pts ) / AV_TIME_BASE) + _video_pts_offset;
-	
+
 	/* hence start time for this sub */
 	Time const from = (packet_time + (double (sub.start_display_time) / 1e3)) * TIME_HZ;
 	Time const to = (packet_time + (double (sub.end_display_time) / 1e3)) * TIME_HZ;
