@@ -1,3 +1,8 @@
+2014-01-14  Carl Hetherington  <cth@carlh.net>
+
+	* Try to fix subtitle problems when the video frame rate is being changed
+	from content to DCP.
+
 2014-01-13  Carl Hetherington  <cth@carlh.net>
 
 	* Change 4:3 and 5:3 ratios to be precise rather than 1.33:1 and 1.66:1, and
